<resources>
    <string name="app_name">Coffee</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email" translatable="false">e-mail</string>
    <string name="enter">Enter</string>
    <string name="on_the_map">On the map</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="image">Image</string>
    <string name="pay">Pay</string>
    <string name="order_time" translatable="false">Время ожидания заказа \n15 минут! \nСпасибо что выбрали нас!</string>
    <string name="nearest_shops">Nearest shops</string>
    <string name="map">Map</string>
    <string name="menu">Menu</string>
    <string name="your_order">Your order</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="it_is_necessary_to_fill_in_all_fields">It is necessary to fill in all fields</string>
    <string name="something_went_wrong_try_again_later">Something went wrong. Try again later</string>
    <string name="login_or_password_is_blank">Login or password is blank</string>
    <string name="invalid_login_or_password">Invalid login or password</string>
</resources>