<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/size_160"
    android:layout_height="@dimen/size_200"
    android:layout_marginHorizontal="@dimen/size_24"
    android:layout_marginBottom="@dimen/size_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_8">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_136"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_coffee_24"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_marginTop="@dimen/size_4"
            android:textSize="@dimen/text_15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:text="Эспрессо" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="200 руб."
            android:textStyle="bold"
            android:textSize="@dimen/text_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/minus"
            app:layout_constraintEnd_toStartOf="@id/count"
            app:layout_constraintTop_toTopOf="@id/price"
            app:layout_constraintBottom_toBottomOf="@id/price"
            android:layout_marginEnd="@dimen/size_12"
            android:src="@drawable/ic_minus_12"
            android:textSize="@dimen/text_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/minus" />

        <TextView
            android:id="@+id/count"
            app:layout_constraintEnd_toStartOf="@id/plus"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0"
            android:layout_marginEnd="@dimen/size_12"
            android:textStyle="bold"
            android:textSize="@dimen/text_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/price"
            app:layout_constraintBottom_toBottomOf="@id/price"
            android:layout_marginStart="@dimen/size_8"
            android:layout_marginEnd="@dimen/size_8"
            android:src="@drawable/ic_plus_12"
            android:textSize="@dimen/text_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/plus" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>