<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/white"
    tools:context="ui.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintBottom_toTopOf="@id/login_log_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_log_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/brown"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/password_title"
            app:layout_constraintTop_toBottomOf="@id/email_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/brown" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/password"
            app:layout_constraintBottom_toBottomOf="@id/password_log_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_log_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_log_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/brown"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/brown"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/repeat_password_title"
            app:layout_constraintTop_toBottomOf="@id/password_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/brown" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/repeat_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/repeat_password"
            app:layout_constraintBottom_toTopOf="@id/repeat_password_log_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_log_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_log_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/brown"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/brown"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/reg_button"
            app:layout_constraintTop_toBottomOf="@id/repeat_password_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/brown" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reg_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48"
            android:layout_marginTop="@dimen/size_16"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/registration"
            android:textColor="@color/light_brown"
            android:textSize="@dimen/text_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeat_password_log_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>